<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frame_Begin"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:id="@+id/text_start"
            android:text="@string/start_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:visibility="visible"
            />

    </FrameLayout>


        <Switch
            android:id="@+id/switch_enable_bt"
            android:text="@string/State_change"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"/>

    <FrameLayout
        android:id="@+id/frame_message"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
            <TextView
                android:id="@+id/tv_message"
                android:text="@string/Bluetooth_off"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/frame_control"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_enable_search"
            android:layout_marginTop="8dp"
            android:text="@string/Search"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/pb_progress"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            android:visibility="gone"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/lv_bt_device"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/frameLedControl"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_disconnect"
            android:text="@string/disconnect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/switch_led_red"
            android:text="@string/on_led_red"
            android:textSize="18sp"
            android:textColor="@color/red_color"
            />
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/switch_led_red"
            android:layout_centerInParent="true"
            android:id="@+id/switch_led_green"
            android:text="@string/on_led_green"
            android:textSize="18sp"
            android:textColor="@color/grenn_color"
            />
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/switch_led_green"
            android:layout_centerInParent="true"
            android:id="@+id/switch_led_blue"
            android:text="@string/blue_led_on"
            android:textSize="18sp"
            android:textColor="@color/blue"
            />

    </RelativeLayout>

</LinearLayout>